# asset.export

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
backend/: Cargo.toml
backend/src/: api.rs  db.rs  main.rs  models.rs  processor.rs
frontend/: index.html  metadata.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ExportWorkspace.tsx  ImageEditor.tsx  NewProjectModal.tsx  ProjectDashboard.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/services/: api.ts
frontend/src/store/: projectStore.ts
frontend/src/types/: index.ts
src/: index.css
src/components/: FormatSidebar.tsx  ImageGrid.tsx  NewProjectModal.tsx  Sidebar.tsx
src/lib/: utils.ts
src/store/: projectStore.ts
